# cpuid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
src/: CMakeLists.txt  cpuid.S  cpuid.c  cpuid.h  dump.c  dump.h  dump_amd.c  dump_amd.h  dump_intel.c  dump_intel.h  main.c
src/lib/: CMakeLists.txt  cpuid.S  cpuid.c  cpuid.h
src/py/: CMakeLists.txt  py_cpuid.c  py_cpuid.h
