[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "py_cpuid"
version = "0.0.1"

# [build-system]
# requires = ["setuptools>=61.0", "py-build-cmake>=0.5.0"]
# build-backend = "py_build_cmake.build"
#
# [project]
# name = "py_cpuid"
# version = "0.0.1"
# description = "cpuid from python"
# # license = {text = "MIT"}
# authors = [
# 	{name = "Abhiram V", email = "abhiramv256@gmail.com"}
# ]
#
# [tool.py-build-cmake.module]
# name = "py"
#
# [tool.py-build-cmake.sdist]
# include = ["CMakeLists.txt", "./py/*.c", "./py/*.h", "./lib/*.c", "./lib/*.h"]
#
# [tool.py-build-cmake.cmake]
# install_components = ["py_cpuid"]
